--- a/bascinet.conf
+++ b/bascinet.conf
@@ -6,6 +6,15 @@
         "extensions": [
           "java",
           "pdm",
+          "tgt",
+          "dot"
+        ]
+      },
+      {
+        "exclude": false,
+        "extensions": [
+          "java",
+          "pdm",
           "tgt"
         ]
       },
@@ -19,12 +28,12 @@
     ]
   },
   "selections": {
-    "transformationFile": "Transformation/TL_Modules/view_tree.tlp",
-    "parserFile": "Transformation/Syntax/mini_language.bnf",
-    "grammarStartSymbol": "prog",
-    "lexerFile": "Transformation/Syntax/lexer.spec",
     "prettyPrinterStyleFile": "Transformation/Syntax/format.sty",
-    "savedStateFile": "Transformation/bin/transform.mlton"
+    "parserFile": "Transformation/Syntax/mini_language.bnf",
+    "transformationFile": "Transformation/TL_Modules/interpret.tlp",
+    "grammarStartSymbol": "prog",
+    "savedStateFile": "Transformation/bin/transform.mlton",
+    "lexerFile": "Transformation/Syntax/lexer.spec"
   },
-  "tlSystemDirectory": "C:\\Users\\Pratik\\Documents\\ProgrammingLanguagesSpring2016\\TL_System"
+  "tlSystemDirectory": "C:\\TL_System"
 }
